# sqlite-escape-indentifer-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
scripts/: fetch_sqlite.py
src/sqlite_quote/: __init__.py  _quote.c  _quote.pyi
tests/: test_quote.py
