[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-quote"
version = "0.1.1"
description = "Safely quote SQL identifiers and string literals using SQLite's own sqlite3_mprintf (%w / %Q / %q)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Alex Garcia" }]
keywords = ["sqlite", "sql", "quote", "escape", "identifier", "injection", "mprintf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/asg017/sqlite-escape-indentifer-py"
Issues = "https://github.com/asg017/sqlite-escape-indentifer-py/issues"

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqlite_quote = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
# PyPy uses a different C API surface; we target CPython only.
skip = ["pp*", "*-musllinux_i686"]
build-frontend = "build"
test-requires = ["pytest"]
test-command = "pytest {project}/tests"
# Arch is driven per-job from the CI matrix (CIBW_ARCHS) so native x86_64 and
# native aarch64 build on separate runners. Locally, cibuildwheel defaults to
# the host arch.
